full-stack-books-application/launchtemplate.tf
data "aws_ami" "example" {
  most_recent = true
  owners      = ["amazon"] # Replace with the AWS account ID if needed

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"] # Use your AMI name pattern
  }
}

# Launch Template Resource
resource "aws_launch_template" "frontend" {
  name                   = "frontend-terraform"
  description            = "frontend-terraform"
  image_id               = var.ami
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.frontend-server-sg.id]
  key_name               = var.key-name #chnage the key 
  #user_data = filebase64("${path.module}/frontend-lt.sh")
  #default_version = 1
  update_default_version = true
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "frontend-terraform"
    }
  }
}

###################################################################################
data "aws_ami" "example1" {
  most_recent = true
  owners      = ["amazon"] # Replace with the AWS account ID if needed

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"] # Use your AMI name pattern
  }
}


# Launch Template Resource
resource "aws_launch_template" "backend" {
  name                   = "backend-terraform"
  description            = "backend-terraform"
  image_id               = var.ami
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.backend-server-sg.id]
  key_name               = var.key-name
  #user_data = filebase64("${path.module}/backend-lt.sh")
  #default_version = 1
  update_default_version = true
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "backend-terraform"
    }
  }
}
